[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/player/Player.gd" type="Script" id=1]
[ext_resource path="res://game/player/StateManagerP.gd" type="Script" id=2]
[ext_resource path="res://game/player/states/Moving.gd" type="Script" id=3]
[ext_resource path="res://game/player/Dashing.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 375.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.160784, 1, 0, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.384314, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="Animation" id=5]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../../CooldownBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.6, 1.9, 2.5 ),
"transitions": PoolRealArray( -2, 1, 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -225 ), Vector2( -50, -230 ), Vector2( -50, -225 ), Vector2( -50, -225 ), Vector2( 0, -225 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../CooldownBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../CooldownBar/BarInside:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.5 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, 15 ), Vector2( 200, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../CooldownBar:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 1.6, 1.9, 2.5 ),
"transitions": PoolRealArray( -2, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../CooldownBar/BarInside:custom_styles/panel:bg_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.384314, 1, 0, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Panel" parent="."]
margin_left = -12.5
margin_top = -200.0
margin_right = 12.5
margin_bottom = 200.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownBar" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = -225.0
margin_right = 200.0
margin_bottom = -210.0
rect_scale = Vector2( 1e-05, 1 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarInside" type="Panel" parent="CooldownBar"]
margin_right = 200.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Moving" type="Node" parent="StateManager"]
script = ExtResource( 3 )

[node name="Dashing" type="Node" parent="StateManager"]
script = ExtResource( 4 )

[node name="DashDuration" type="Timer" parent="StateManager/Dashing"]
process_mode = 0
one_shot = true

[node name="MovementLockDuration" type="Timer" parent="StateManager/Dashing"]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="StateManager/Dashing"]
wait_time = 1.5
one_shot = true

[node name="CooldownAnim" type="AnimationPlayer" parent="StateManager/Dashing"]
anims/charging = SubResource( 5 )

[connection signal="timeout" from="StateManager/Dashing/DashDuration" to="StateManager/Dashing" method="dash_ended"]
